--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,13 +16,11 @@ body {
 main {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 100px 180px 4fr 2fr;
-      grid-template-columns: 100px 180px 4fr 2fr;
+  -ms-grid-columns: 100px 180px 4fr 3fr;
+      grid-template-columns: 100px 180px 4fr 3fr;
   -ms-grid-rows: 73px 1fr;
       grid-template-rows: 73px 1fr;
       grid-template-areas: "sidebar navbar navbar    navbar" "sidebar menu   main-body activities";
-  border: 2px solid #9fa1b6;
-  margin: 5px;
 }
 
 main #sidebar {
@@ -30,7 +28,7 @@ main #sidebar {
   -ms-grid-row-span: 2;
   -ms-grid-column: 1;
   grid-area: sidebar;
-  border-right: 3px solid #9fa1b6;
+  border-right: 1px solid #9fa1b6;
 }
 
 main #sidebar .logo {
@@ -53,12 +51,14 @@ main #sidebar .logo h4 {
   line-height: 70px;
   color: #000000;
   cursor: pointer;
-  -webkit-transition: color 0.2s ease-in-out;
-  transition: color 0.2s ease-in-out;
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
 main #sidebar .logo h4:hover {
   color: #2c47c8;
+  text-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 main #sidebar .selectors {
@@ -106,21 +106,13 @@ main #sidebar .selectors .settings:hover {
 main #sidebar .selectors .home.active,
 main #sidebar .selectors .settings.active {
   position: relative;
-  background-color: rgba(106, 137, 204, 0.2);
-}
-
-main #sidebar .selectors .home.active img,
-main #sidebar .selectors .settings.active img {
-  fill: #2c47c8;
 }
 
 main #sidebar .selectors .home.active::before,
 main #sidebar .selectors .settings.active::before {
   content: "";
   position: absolute;
-  border-left: 5px solid #2c47c8;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+  border-left: 3px solid #2c47c8;
   top: 0;
   left: 0;
   height: 100%;
@@ -152,33 +144,52 @@ main #navbar {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  border-bottom: 3px solid #9fa1b6;
+  border-bottom: 1px solid #9fa1b6;
+}
+
+main #navbar .search {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+}
+
+main #navbar .search img {
+  position: absolute;
+  top: -2px;
 }
 
 main #navbar .search input.search-box {
-  font-size: 18px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  font-size: 17px;
   border: none;
   border-bottom: 2px solid #9fa1b6;
   color: #2c47c8;
   width: 200px;
-  -webkit-transition: width 0.3s linear;
-  transition: width 0.3s linear;
+  -webkit-transition: all 0.3s linear;
+  transition: all 0.3s linear;
+  padding-left: 25px;
 }
 
 main #navbar .search input.search-box::-webkit-input-placeholder {
   color: #2c47c8;
+  font-size: 18px;
 }
 
 main #navbar .search input.search-box:-ms-input-placeholder {
   color: #2c47c8;
+  font-size: 18px;
 }
 
 main #navbar .search input.search-box::-ms-input-placeholder {
   color: #2c47c8;
+  font-size: 18px;
 }
 
 main #navbar .search input.search-box::placeholder {
   color: #2c47c8;
+  font-size: 18px;
 }
 
 main #navbar .search input.search-box:focus {
@@ -205,10 +216,26 @@ main #navbar .navbar-user .notifications {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+}
+
+main #navbar .navbar-user .notifications::after {
+  content: "";
+  position: absolute;
+  right: 11px;
+  top: 2px;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  background-color: #f16a5e;
 }
 
 main #navbar .navbar-user .notifications img {
   padding-right: 10px;
+  width: 37px;
 }
 
 main #navbar .navbar-user .user-details {
@@ -240,23 +267,26 @@ main #navbar .navbar-user .user-details .user-type {
   font-size: 12px;
 }
 
+main #navbar .navbar-user .user-img {
+  position: relative;
+}
+
 main #navbar .navbar-user .user-img img {
   width: 55px;
   height: 55px;
   border-radius: 50%;
-  border: 1px solid black;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  position: relative;
-  z-index: -10;
+  -webkit-box-shadow: 0 6px 6px rgba(0, 0, 0, 0.23), 0 8px 12px rgba(0, 0, 0, 0.19);
+          box-shadow: 0 6px 6px rgba(0, 0, 0, 0.23), 0 8px 12px rgba(0, 0, 0, 0.19);
 }
 
 main #navbar .navbar-user .user-img::after {
   content: "";
   position: absolute;
-  top: 16px;
-  right: 28px;
+  top: 8px;
+  left: 44px;
   height: 15px;
   width: 15px;
   border-radius: 50%;
@@ -310,17 +340,14 @@ main #menu ul.menu-options li.menu-item:hover {
 
 main #menu ul.menu-options li.active {
   position: relative;
-  background-color: rgba(106, 137, 204, 0.2);
 }
 
 main #menu ul.menu-options li.active::before {
   content: "";
   position: absolute;
-  border-left: 5px solid #2c47c8;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+  border-left: 3px solid #2c47c8;
   top: 0;
-  left: 0;
+  left: -2px;
   height: 100%;
 }
 
@@ -332,8 +359,8 @@ main #body {
   -ms-grid-row: 2;
   -ms-grid-column: 3;
   grid-area: main-body;
-  border-left: 3px solid #9fa1b6;
-  border-right: 3px solid #9fa1b6;
+  border-left: 1px solid #9fa1b6;
+  border-right: 1px solid #9fa1b6;
 }
 
 main #activities {
@@ -386,4 +413,18 @@ main #activities .user-activities .activity-list .activity::before {
   top: 9px;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
+}
+
+@media (min-width: 1400px) {
+  main {
+    max-width: 1240px;
+    -webkit-box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+            box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  }
+}
+
+main {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
 }
