--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -233,9 +233,6 @@ main {
 
   #menu {
     grid-area: menu;
-
-    display: flex;
-    align-items: center;
     width: 100%;
 
     ul.menu-options {
@@ -243,20 +240,88 @@ main {
       width: 100%;
 
       li.menu-item {
+        height: 100%;
         cursor: pointer;
-        padding: 15px 0 15px 20px;
-        margin-bottom: 10px;
+        display: block;
 
         &:first-child {
           margin-top: 10px;
         }
 
         a.menu-link {
+          display: block;
+          height: 100%;
+          padding: 15px 0 15px 20px;
           text-decoration: none;
           font-size: 15px;
           color: $color-text;
           font-family: "Open Sans", sans-serif;
-          font-weight: 600;
+          // font-weight: 600;
+
+          &.dropdown-toggle {
+            span {
+              position: relative;
+
+              &.show {
+                &::before,
+                &::after {
+                  top: 50%;
+                }
+
+                &::after {
+                  transform: rotateY(45deg);
+                }
+                &::before {
+                  transform: rotateX(-180deg);
+                }
+              }
+
+              &::before,
+              &::after {
+                content: "";
+                top: 40%;
+                position: absolute;
+                width: 18px;
+                height: 2px;
+                background-color: black;
+                border-left: 1px solid;
+                transform: translate(-50%, -50%);
+                transition: all 0.2s linear;
+              }
+
+              &::before {
+                left: calc(100% + 18px);
+              }
+              &::after {
+                left: calc(100% + 9px);
+                transform: rotate(90deg);
+              }
+            }
+          }
+        }
+
+        .dropdown-menu {
+          padding-left: 40px;
+          height: 0;
+          overflow: hidden;
+
+          &.show {
+            height: 100%;
+          }
+
+          &.hide {
+            height: 0;
+          }
+
+          .dropdown-item {
+            // padding-top: 8px;
+            display: block;
+            color: $color-text;
+            text-decoration: none;
+            font-size: 14px;
+            font-family: "Open Sans", sans-serif;
+            // font-weight: 600;
+          }
         }
 
         &:hover {
@@ -537,9 +602,6 @@ main {
     }
 
     #menu {
-      // position: absolute;
-      // right: 0;
-      // left: 0;
       background-color: $color-black;
       padding-left: 20px;
       width: 100vw;
@@ -548,9 +610,7 @@ main {
 
       ul.menu-options {
         li.menu-item {
-          display: block;
-          padding: 8px 0 8px 20px;
-          margin-bottom: 0px;
+          // padding: 8px 0 8px 20px;
 
           &:first-child {
             margin-top: 0;
@@ -560,74 +620,58 @@ main {
           }
 
           a.menu-link {
+            padding: 8px 0 8px 20px;
             font-size: 16px;
             color: white;
             display: block;
-            position: relative;
+            //       position: relative;
 
             &.dropdown-toggle {
               span {
-                position: relative;
+                //           position: relative;
 
                 &.show {
                   &::before,
                   &::after {
-                    top: 50%;
+                    //               top: 50%;
                   }
 
                   &::after {
-                    transform: rotateY(45deg);
+                    //               transform: rotateY(45deg);
                   }
                   &::before {
-                    transform: rotateX(-180deg);
+                    //               transform: rotateX(-180deg);
                   }
                 }
 
                 &::before,
                 &::after {
-                  content: "";
-                  top: 40%;
-                  position: absolute;
-                  width: 18px;
-                  height: 2px;
+                  //             content: "";
+                  //             top: 40%;
+                  //             position: absolute;
+                  //             width: 18px;
+                  //             height: 2px;
                   background-color: white;
-                  border-left: 1px solid;
-                  transform: translate(-50%, -50%);
-                  transition: all 0.2s linear;
+                  //             border-left: 1px solid;
+                  //             transform: translate(-50%, -50%);
+                  //             transition: all 0.2s linear;
                 }
 
                 &::before {
-                  left: calc(100% + 18px);
+                  //             left: calc(100% + 18px);
                 }
                 &::after {
-                  left: calc(100% + 9px);
-                  transform: rotate(90deg);
+                  //             left: calc(100% + 9px);
+                  //             transform: rotate(90deg);
                 }
               }
             }
           }
 
           .dropdown-menu {
-            padding-left: 20px;
-            height: 0;
-            overflow: hidden;
-
-            &.show {
-              height: 100%;
-            }
-
-            &.hide {
-              height: 0;
-            }
-
             .dropdown-item {
-              padding-top: 8px;
-              display: block;
               color: white;
-              text-decoration: none;
               font-size: 16px;
-              font-family: "Open Sans", sans-serif;
-              font-weight: 600;
             }
           }
 
